[*] ABYSSP-239 #in-review #assign ilkiz.kiziltas #comment /contracts/api/{uuid} and /contracts/app/{uuid} api paths developed only with get method
